Fix production JavaScript errors and improve site reliability
- Fix CORS errors in meeting.js by using sample data instead of API calls
- Fix click-scroll.js TypeError by adding section existence checks
- Update all HTML files to use non-minified assets for better debugging
- Add proper meeting section styling across all pages
- Fix hardcoded 'Wednesday' text to be generic
- Add rel='noopener noreferrer' to all external links for security
- Improve click-scroll.js to only run on pages with required sections
- Ensure consistent styling and functionality across all pages

Resolves production console errors and improves user experience.

--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,107 @@
+# Jekyll
 .bundle/
 vendor/bundle/
-node_modules/
 _site/
 .jekyll-cache/
+.sass-cache/
+
+# Dependencies
+node_modules/
+package-lock.json
+
+# Build outputs
+dist/
+build/
+*.min.css
+*.min.js
+*.min.js.map
 
 # System files
 .DS_Store
 **/.DS_Store
 Thumbs.db
+ehthumbs.db
+Desktop.ini
 
-# Backup files
-*.old.*
-*.backup
-*~
-
-# IDE
+# IDE and editors
 .vscode/
 .idea/
+*.swp
+*.swo
+*~
+.project
+.settings/
+.classpath
 
 # Logs
 *.log
 npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
 
-# Environment
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Coverage directory used by tools like istanbul
+coverage/
+*.lcov
+
+# nyc test coverage
+.nyc_output
+
+# Environment variables
 .env
 .env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-# Minified files
-*.min.css
-*.min.js
-*.min.js.map
+# Temporary folders
+tmp/
+temp/
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Backup files
+*.backup
+*.bak
+*.old
+*.orig
+*.rej
+*.swp
+*.tmp
+
+# Archive files
+*.7z
+*.dmg
+*.gz
+*.iso
+*.jar
+*.rar
+*.tar
+*.zip
+
+# Security
+*.pem
+*.key
+*.crt
+*.p12
+*.pfx
+
+# Local development
+.local/
+.cache/
+
+# Documentation (keep in repo but exclude from builds)
+# Note: README.md, CONTRIBUTING.md, LICENSE, etc. are intentionally tracked
