--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,32 +1,22 @@
 {
+  "extends": ["stylelint-config-standard"],
+  "rules": {
+    "no-duplicate-selectors": true,
+    "no-descending-specificity": null,
+    "keyframes-name-pattern": null,
+    "color-function-alias-notation": null,
+    "color-function-notation": null,
+    "alpha-value-notation": null,
+    "property-no-deprecated": null,
+    "declaration-property-value-no-unknown": null,
+    "comment-empty-line-before": null,
+    "number-max-precision": null
+  },
   "ignoreFiles": [
     "**/*.min.css",
     "**/bootstrap.min.css",
+    "**/bootstrap.css",
     "**/bootstrap-icons.css",
     "**/magnific-popup.css"
-  ],
-  "rules": {
-    "no-duplicate-selectors": true,
-    "declaration-block-trailing-semicolon": "always",
-    "declaration-colon-space-after": "always",
-    "declaration-colon-space-before": "never",
-    "indentation": 2,
-    "string-quotes": "double",
-    "color-hex-case": "lower",
-    "color-hex-length": "short",
-    "number-leading-zero": "always",
-    "font-weight-notation": "numeric",
-    "comment-whitespace-inside": "always",
-    "rule-empty-line-before": ["always", {
-      "except": ["first-nested"],
-      "ignore": ["after-comment"]
-    }],
-    "selector-pseudo-element-colon-notation": "double",
-    "selector-pseudo-class-parentheses-space-inside": "never",
-    "media-feature-range-operator-space-before": "always",
-    "media-feature-range-operator-space-after": "always",
-    "media-feature-parentheses-space-inside": "never",
-    "media-feature-colon-space-before": "never",
-    "media-feature-colon-space-after": "always"
-  }
+  ]
 }
