fix: Add debugging and improve workflow reliability
🔧 WORKFLOW IMPROVEMENTS:
- Added .ruby-version file (3.4.5) for consistent Ruby version
- Removed --update flag from bundler-audit (can cause issues)
- Added debugging output to accessibility workflow
- Increased server startup wait time (2s → 5s)
- Added server connectivity test before pa11y-ci

🐛 DEBUGGING ADDED:
- Build completion confirmation
- Directory listing after build
- Server startup confirmation
- Connectivity test before accessibility checks
- Better error reporting

This should help identify and fix the workflow failures! 🔍

--- a/.github/workflows/accessibility.yml
+++ b/.github/workflows/accessibility.yml
@@ -24,7 +24,10 @@ jobs:
           bundler-cache: true
 
       - name: Build site
-        run: bundle exec jekyll build
+        run: |
+          bundle exec jekyll build
+          echo "Build completed successfully"
+          ls -la _site/
 
       - name: Set up Node
         uses: actions/setup-node@v4
@@ -33,8 +36,12 @@ jobs:
 
       - name: Run Pa11y CI against built site
         run: |
+          echo "Starting http-server on port 4000..."
           npx --yes http-server _site -p 4000 &
           SERVER_PID=$!
           trap "kill $SERVER_PID" EXIT
-          sleep 2
+          sleep 5
+          echo "Testing server connectivity..."
+          curl -I http://127.0.0.1:4000/ || echo "Server not responding"
+          echo "Running pa11y-ci..."
           npx --yes pa11y-ci --config .pa11yci.json
