fix: Update Gemfile.lock to match sass-embedded version
🔧 LOCKFILE SYNC:
- Updated Gemfile.lock to use sass-embedded ~> 1.64
- Regenerated lockfile with correct platform support
- Fixed version mismatch causing workflow failures

🐛 WORKFLOW FIXES:
- Security workflow should now pass
- Accessibility workflow should now pass
- Both workflows now have correct gem versions

This fixes the frozen lockfile error in GitHub Actions! 🚀

--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -23,5 +23,8 @@ jobs:
           ruby-version: "3.4"
           bundler-cache: true
 
+      - name: Install bundler-audit
+        run: gem install bundler-audit
+
       - name: Run Bundler Audit
         run: bundle exec bundle-audit check
