fix: Add build process for optimized-bundle.min.js
🔧 BUILD PROCESS FIX:
- Added minify:optimized script to package.json
- Creates optimized-bundle.min.js from optimized-bundle.js source
- Updated minify script to include optimized bundle
- Added build-assets job to lint workflow

🐛 404 ERROR RESOLUTION:
- optimized-bundle.min.js now created during build process
- File added to git (overrides .gitignore for this specific file)
- GitHub Actions will now build the missing file
- Resolves 404 error in production and CI environments

This fixes the missing optimized-bundle.min.js file! 🚀

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -118,3 +118,30 @@ jobs:
 
       - name: Run Shell Lint
         run: npm run lint:shell
+
+  build-assets:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20"
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Build assets
+        run: npm run minify
+
+      - name: Check if optimized-bundle.min.js exists
+        run: |
+          if [ ! -f "js/optimized-bundle.min.js" ]; then
+            echo "ERROR: optimized-bundle.min.js was not created during build"
+            exit 1
+          fi
+          echo "✅ optimized-bundle.min.js created successfully"
