--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "format": "npm run format:all",
     "minify:css": "cleancss -o css/style.min.css css/style.css && cleancss -o css/abstract-shapes.min.css css/abstract-shapes.css",
     "minify:js": "terser js/custom.js js/meeting.js js/click-scroll.js js/magnific-popup-options.js --compress --mangle --source-map -o js/bundle.min.js",
-    "minify": "npm run minify:css && npm run minify:js",
+    "minify:optimized": "terser js/optimized-bundle.js --compress --mangle --source-map -o js/optimized-bundle.min.js",
+    "minify": "npm run minify:css && npm run minify:js && npm run minify:optimized",
     "build:prod": "npm run minify && bundle exec jekyll build",
     "build:dev": "bundle exec jekyll build",
     "serve": "bundle exec jekyll serve --livereload",
