fix: Resolve all linting errors and warnings
🔧 LINTING FIXES:
- Added frozen_string_literal comment to Ruby plugin
- Fixed shell script formatting (indentation, spacing)
- Added YAML document start markers to all workflow files
- Fixed long lines in YAML files (preview-deploy.yml, _config.yaml)
- Standardized shell command redirection syntax

🐛 SPECIFIC FIXES:
- Ruby: Added # frozen_string_literal: true to _plugins/copy_assets.rb
- Shell: Fixed indentation in smoke-tests.sh, setup-preview.sh
- Shell: Fixed command redirection syntax (&> /dev/null → &>/dev/null)
- YAML: Added --- markers to all workflow and config files
- YAML: Split long lines to stay under 80 character limit

This should resolve all 2 lint workflow failures! 🚀

--- a/.github/workflows/preview-deploy.yml
+++ b/.github/workflows/preview-deploy.yml
@@ -1,3 +1,4 @@
+---
 name: Preview Deploy
 
 on:
@@ -53,7 +54,8 @@ jobs:
         with:
           script: |
             const branch = context.payload.pull_request.head.ref;
-            const previewUrl = `https://${context.repo.owner}.github.io/${context.repo.repo}/${branch}/`;
+            const previewUrl = `https://${context.repo.owner}.github.io/` +
+              `${context.repo.repo}/${branch}/`;
 
             github.rest.issues.createComment({
               issue_number: context.issue.number,
