--- a/.github/workflows/preview-deploy.yml
+++ b/.github/workflows/preview-deploy.yml
@@ -37,6 +37,9 @@ jobs:
       - name: Install Node dependencies
         run: npm ci
 
+      - name: Generate minified assets
+        run: npm run minify
+
       - name: Build Jekyll site
         run: bundle exec jekyll build
         env:
