--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -59,7 +59,7 @@ jobs:
             echo "No HTML files to lint."
           fi
 
-  markdownlint:
+  node-lint:
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -74,63 +74,33 @@ jobs:
 
       - name: Install dependencies
         run: npm ci
-
-      - name: Run Markdownlint
-        run: npm run lint:md
-
-  yaml-lint:
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up Node
-        uses: actions/setup-node@v4
-        with:
-          node-version: "22"
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Run YAML Lint
-        run: npm run lint:yaml
-
-  json-lint:
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up Node
-        uses: actions/setup-node@v4
-        with:
-          node-version: "22"
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Run JSON Lint
-        run: npm run lint:json
-
-  shell-lint:
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
 
       - name: Install Shellcheck
         run: |
           sudo apt-get update
           sudo apt-get install -y shellcheck
 
-      - name: Run Shell Lint
-        run: npm run lint:shell
+      - name: Run lint suite
+        run: npm run lint
+
+  css-tests:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: "22"
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Run CSS tests
+        run: npm run test
 
   build-assets:
     runs-on: ubuntu-latest
