--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "2.0.0",
   "description": "CivicTech Waterloo Region Website",
   "scripts": {
+    "serve": "bundle exec jekyll serve --livereload",
+    "build": "npm run build:prod",
     "build:dev": "bundle exec jekyll build",
-    "build:prod": "JEKYLL_ENV=production bundle exec jekyll build",
+    "build:prod": "npm run minify && JEKYLL_ENV=production bundle exec jekyll build",
     "build:css": "bash scripts/build-css.sh",
     "build:main-css": "bash scripts/build-main-css.sh",
     "minify:css": "cleancss -o css/main.min.css css/main.css",
@@ -12,19 +14,21 @@
     "minify": "npm run minify:css && npm run minify:js",
     "purge:css": "purgecss --config ./purgecss.config.js",
     "optimize:all": "npm run build:css && npm run minify:js",
+    "lint": "npm run lint:css && npm run lint:md && npm run lint:yaml && npm run lint:json && npm run lint:shell",
     "lint:css": "stylelint \"css/**/*.css\" --config .stylelintrc.json",
     "lint:md": "bash scripts/lint-markdown.sh",
     "lint:yaml": "bash scripts/lint-yaml.sh",
     "lint:json": "bash scripts/lint-json.sh",
     "lint:shell": "bash scripts/lint-shell.sh",
-    "analyze:css": "css-analyzer css/style.css --format json > css-analysis.json",
+    "analyze:css": "css-analyzer css/main.css --format json > css-analysis.json",
     "test:performance": "lighthouse http://localhost:4000 --output=json --output-path=./lighthouse-report.json --chrome-flags='--headless' --quiet",
     "monitor:css": "bash scripts/monitor-css-performance.sh",
     "test:css": "node tests/css/component-tests.js",
     "test:css:visual": "node tests/css/visual-regression.js",
     "test:css:regression": "bash scripts/css-regression-test.sh",
     "validate:css:budget": "bash scripts/validate-css-budget.sh",
-    "test:css:all": "npm run test:css && npm run test:css:visual && npm run test:css:regression && npm run validate:css:budget"
+    "test:css:all": "npm run test:css && npm run test:css:visual && npm run test:css:regression && npm run validate:css:budget",
+    "test": "npm run test:css:all"
   },
   "devDependencies": {
     "@axe-core/cli": "^4.10.2",
