--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -42,6 +42,8 @@ jobs:
           VALIDATE_NATURAL_LANGUAGE: false
           VALIDATE_YAML_PRETTIER: false
           VALIDATE_BIOME: false
+          VALIDATE_BIOME_FORMAT: false
+          VALIDATE_BIOME_LINT: false
           VALIDATE_GITHUB_ACTIONS_ZIZMOR: false
 
   htmlhint:
