--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "lint:yaml": "bash scripts/lint-yaml.sh",
     "lint:json": "bash scripts/lint-json.sh",
     "lint:shell": "bash scripts/lint-shell.sh",
-    "analyze:css": "css-analyzer css/main.css --format json > css-analysis.json",
+    "analyze:css": "cssstats css/main.css --json > css-analysis.json",
     "test:performance": "lighthouse http://localhost:4000 --output=json --output-path=./lighthouse-report.json --chrome-flags='--headless' --quiet",
     "monitor:css": "bash scripts/monitor-css-performance.sh",
     "test:css": "node tests/css/component-tests.js",
@@ -38,9 +38,9 @@
     "browserslist": "^4.26.3",
     "caniuse-lite": "^1.0.30001764",
     "clean-css-cli": "^5.6.3",
-    "css-analyzer": "^0.0.3",
+    "cssstats-cli": "^4.0.5",
     "css-tree": "^2.3.1",
-    "jsonlint": "^1.6.3",
+    "postcss-combine-media-query": "^2.1.0",
     "markdownlint-cli": "^0.47.0",
     "lighthouse": "^12.8.2",
     "pa11y": "^9.0.1",
@@ -49,7 +49,6 @@
     "postcss": "^8.4.49",
     "postcss-cli": "^11.0.1",
     "postcss-combine-duplicated-selectors": "^10.0.2",
-    "postcss-combine-media-query": "^1.0.1",
     "postcss-sort-media-queries": "^4.2.1",
     "purgecss": "^7.0.2",
     "stylelint": "^16.26.1",
