--- a/js/projects.json
+++ b/js/projects.json
@@ -1,6 +1,6 @@
 [
   {
-    "name": "WRVotes",
+    "name": "Waterloo Region Votes",
     "year": [2018],
     "role": ["Software", "Sponsor"],
     "logo": "/images/regionvotes.webp",
@@ -16,11 +16,11 @@
     "github": "https://github.com/CivicTechWR/project-pech"
   },
   {
-    "name": "Midtown Radio App",
-    "year": "Active",
-    "role": ["Software"],
-    "logo": "https://opengraph.githubassets.com/1/CivicTechWR/MidtownRadioApp",
-    "url": "https://github.com/CivicTechWR/MidtownRadioApp",
-    "github": "https://github.com/CivicTechWR/MidtownRadioApp"
+    "name": "ConnectedKW",
+    "year": [2024],
+    "role": ["Speakers", "Joint events"],
+    "logo": "/images/connected-kw.webp",
+    "url": "https://www.connectedkw.com/",
+    "github": "https://github.com/CivicTechWR/connectedkw"
   }
 ]
