--- a/js/projects-allowlist.json
+++ b/js/projects-allowlist.json
@@ -1,5 +1,11 @@
 [
-  "https://github.com/CivicTechWR/project-union-coop",
+  {
+    "name": "Union Co-op",
+    "url": "https://github.com/CivicTechWR/project-union-coop"
+  },
   "https://github.com/CivicTechWR/project-ploughshares",
-  "https://github.com/CivicTechWR/connectedkw"
+  {
+    "name": "Midtown Radio App",
+    "url": "https://github.com/CivicTechWR/MidtownRadioApp"
+  }
 ]
