--- a/.github/workflows/preview-deploy.yml
+++ b/.github/workflows/preview-deploy.yml
@@ -23,6 +23,7 @@ jobs:
       contents: write
       pull-requests: write
     env:
+      # Use stable, PR-numbered preview paths to avoid branch-name drift.
       PREVIEW_DIR: ${{ github.event_name == 'pull_request' && format('pr-{0}', github.event.pull_request.number) || github.ref_name }}
 
     steps:
@@ -53,6 +54,7 @@ jobs:
           JEKYLL_ENV: production
 
       - name: Remove custom domain for preview
+        # Prevent github.io previews from redirecting to the custom domain.
         run: rm -f _site/CNAME
 
       - name: Deploy to GitHub Pages (preview branch)
