--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -20,7 +20,9 @@ jobs:
     # only bumps dependency versions and will not introduce committed secrets.
     # To also scan Dependabot PRs, add GITLEAKS_LICENSE as a Dependabot secret:
     # Settings → Secrets and variables → Dependabot → New secret.
-    if: github.actor != 'dependabot[bot]'
+    # Use PR author instead of github.actor: actor changes on manual re-runs,
+    # which would cause the job to run again on a Dependabot PR and fail.
+    if: ${{ github.event_name != 'pull_request' || github.event.pull_request.user.login != 'dependabot[bot]' }}
     permissions:
       contents: read
     steps:
